tests/parse/snapshots/file_tests__parse__err_toplevel_break.lx@function_scope.snap
---
source: tests/parse.rs
description: "while (true) {\n    fun foo() {\n        break;\n    }\n\n    break;\n}\n\n"
expression: render_dcx()
---
error: break statement outside of an enclosing loop
  --> err_toplevel_break.lx@function_scope:3:9
  |
3 |         break;
  |         ^^^^^ break statement outside of an enclosing loop
